# Airflow-fastapi-app

./: .gitignore  README.md
airflow/: pyproject.toml
airflow/dags/: branch_operator_dag.py  deferred_operator_dag.py  my_first_dag.py  sensor_dag.py  task_group_dag.py  trigger_dag.py  trigger_rule_dag.py
airflow/dags/custom_operators/: my_operator.py
fastapi-app/: pyproject.toml
fastapi-app/app/: main.py
fastapi-app/app/database/: connection.py
fastapi-app/app/models/: user.py
fastapi-app/app/repositories/: user_repository.py
fastapi-app/app/routers/: user.py  worker.py
fastapi-app/app/utils/: helpers.py
fastapi-app/tests/: disney.py  main_test.py  repository_test.py
